# esp32_compressed_delta_ota_update

./: .gitmodules  LICENSE  README.md
components/delta/: CMakeLists.txt  delta.c
components/delta/include/: delta.h
components/detools/: CMakeLists.txt  README.rst  detools.c
components/detools/heatshrink/: heatshrink_config.h  heatshrink_decoder.c  heatshrink_decoder.h
components/detools/include/: detools.h
components/esp_delta_ota/: CMakeLists.txt  Kconfig  esp_delta_ota.c
components/esp_delta_ota/include/: esp_delta_ota.h
esp_delta_ota/: CMakeLists.txt  idf_component.yml
esp_delta_ota/examples/http_delta_ota/: CMakeLists.txt  partitions.csv
esp_delta_ota/examples/http_delta_ota/main/: Kconfig.projbuild  idf_component.yml  main.c
esp_delta_ota/include/: detools_config.h  esp_delta_ota.h
esp_delta_ota/src/: esp_delta_ota.c
examples/detools_basic/: CMakeLists.txt  sdkconfig.defaults
examples/detools_basic/main/: main.c
examples/http_delta_ota/: CMakeLists.txt  Makefile  partitions.csv
examples/http_delta_ota/main/: CMakeLists.txt  main.c
